# TDM-AerospaceCorp-RF-Interference

./: .gitignore  README.md  TDM_Project_Closure_Instructions.md
workspaces/: model-arch.md
workspaces/arangayy/: Model.ipynb  Model.py  README.md  havegpu.py  rungpu.sh  slurm-15642260.out  slurm-15642439.out
workspaces/atendolk/: README.md  pycode.py  rungpu.sh
workspaces/atendolk 2/: README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  datagraph.ipynb  labels.ipynb  slurm-15018562.out  slurm-15018578.out  slurm-15401348.out  slurm-15401376.out  slurm-15401848.out  slurm-16112099.out
workspaces/clubbers/: Datamodel_clubbers.ipynb  README.md  datamodel_clubber.py
workspaces/clubbers/radiomana-main/: README.md  pyproject.toml
workspaces/clubbers/radiomana-main/examples/: train_baseline.py
workspaces/clubbers/radiomana-main/radiomana/: __init__.py  datasets.py  models.py  transforms.py
workspaces/clubbers/radiomana-main/tests/: test_transforms.py
workspaces/ebroyles/: CNN1.ipynb  CNN2.ipynb  DetermineSizeOfDataSet.ipynb  ExampleCNN.ipynb  GPU_Test.py  README.md  Week4_Train_and_Test.ipynb  ebroyles_visualize_more_data.ipynb  radiomana_test.ipynb  rungpu1.sh  rungpu2.sh  slurm-14243205.out
workspaces/ebroyles/BoostedHierarchialModel/: BoostClass.ipynb  CNN0to3Boosted.ipynb  CNN0to3ImprovedNormAndSyntheticData.ipynb  CNN0to8.ipynb  CNN3to8.ipynb  CNNBinary.ipynb
workspaces/ebroyles/CombinationModel/: CNN0to3Boosted.ipynb  CNN0to3or4to8.ipynb  CNN0to8.ipynb  Classify0To2.py  Experiment.py  ModelHelper.py  ModelRunner.ipynb
workspaces/ebroyles/GPU CNN/: CNNClassify4To8.py  VerifyCNN0To2.ipynb  VerifyCNN0To2_V2.ipynb  (+2 more)
workspaces/ine/: AST_training.py  CNN0to8.py  README.md  bean-model.ipynb  final_model.py  gurt-model.py  model-gurt.py  smooth.py  timm-test.py  yo-gurt-v2.py
workspaces/mohantr/: BaseModel.py  README.md  radiomana.ipynb  rungpu.sh  rungpu2.sh  slurm-14385114.out  slurm-14388830.out  slurm-15018617.out  slurm-15018717.out
workspaces/tbhat/: README.md  tbhat_dataVisualization.ipynb  training.ipynb
workspaces/vrao/: README.md  data_visualization.ipynb  ensamble.py  run1.sh  slurm-14340809.out  slurm-14340810.out  slurm-14340828.out  slurm-14340840.out  slurm-14462391.out  slurm-14462508.out  slurm-14462511.out  slurm-14462579.out  slurm-14481320.out  test.ipynb  test.sh  test2.ipynb  test3.py  training.ipynb  visualize_first10.ipynb
workspaces/wurex/: README.md  Untitled.ipynb  attemptAtModel.ipynb  newmodel.ipynb  newmodelAttempt.py  run1.sh  rungpu1.sh  sklearn.ipynb  sklearnNOTSMOTE.ipynb
(+138 files in other folders)
